@@ -971,16 +971,20 @@
     <last>Ferguson</last>
   </name>
   <name>
+    <first>Wolf</first>
+    <last>Siberski</last>
+  </name>
+  <name>
+    <first>Wolfgang</first>
+    <last>Baer</last>
+  </name>
+  <name>
     <first>Wolfgang</first>
     <last>Frech</last>
   </name>
   <name>
     <first>Wolfgang</first>
     <last>Werner</last>
-  </name>
-  <name>
-    <first>Wolf</first>
-    <last>Siberski</last>
   </name>
   <name>
     <first>Yohann</first>
